<resources>
    <string name="app_name">TaskApp</string>

    <!--    Status Task-->
    <string name="status_todo">To Do</string>
    <string name="status_doing">Doing</string>
    <string name="status_done">Done</string>

    <!--Generic-->
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="email_empty">Preencha o campo de email</string>
    <string name="password_empty">Preencha o campo de senha</string>
    <string name="hint_edit_email">Digite o seu e-mail</string>
    <string name="hint_edit_senha">Digite a sua senha</string>

    <!--    Regsiter Fragment-->
    <string name="email_empty_register_fragment">Preencha com um email válido</string>
    <string name="password_empty_register_fragment">Preencha o campo com uma  senha</string>
    <string name="text_button_register_fragment">Criar conta</string>


    <!--    Login Fragment-->
    <string name="text_button_login_fragment">Login</string>
    <string name="text_button_recover_account">Recuperar conta</string>


    <!--    Form Task Fragment-->
    <string name="description_empty_form_task_fragment">Preencha o campo de tarefas</string>
    <string name="text_button_form_task_fragment">Salvar</string>
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="description_form_task_fragment">Descrição</string>
    <string name="hint_text_form_task_fragment">Criar nova tarefa</string>
    <string name="status_form_task_fragment">Status</string>
    <string name="todo_task_fragment">To Do</string>
    <string name="doing_task_fragment">Doing</string>
    <string name="done_task_fragment">Done</string>



</resources>